panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__typedef__test_use_globally_typedefd_name_as_parameter_name.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/typedef/test_use_globally_typedefd_name_as_parameter_name.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_use_globally_typedefd_name_as_parameter_name.c"
   (typedef a `int`)
   (typedef b `int`)
   (function-definition external
      f~0 `fn(a: int, b: ptr<int>) -> int`
      (params
         a~2 `int`
         b~3 `ptr<int>`)
      (compound-statement
         (return (add `int` (a~2 `int`) (deref `int` (b~3 `ptr<int>`))))))
   (function-definition external
      main~4 `fn() -> int`
      (compound-statement
         (definition x~6 `int` (2 `int`))
         (return
            (call `int`
               (addressof `ptr<fn(a: int, b: ptr<int>) -> int>`
                  (f~0 `fn(a: int, b: ptr<int>) -> int`))
               (40 `int`)
               (addressof `ptr<int>`
                  (x~6 `int`)))))))

----- stderr -----
