panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__typedef__test_use_typedefd_name_as_parameter_name.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/typedef/test_use_typedefd_name_as_parameter_name.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_use_typedefd_name_as_parameter_name.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (typedef a `int`)
         (declaration external f~2 `fn(a: int) -> int` ∅)
         (return
            (call `int`
               (addressof `ptr<fn(a: int) -> int>`
                  (f~2 `fn(a: int) -> int`))
               (42 `int`)))))
   (function-definition external
      f~3 `fn(a: int) -> int`
      (params
         a~5 `int`)
      (compound-statement
         (return (a~5 `int`)))))

----- stderr -----
