panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__typedef__test_void_type_alias_for_zero_parameter_function.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/typedef/test_void_type_alias_for_zero_parameter_function.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_void_type_alias_for_zero_parameter_function.c"
   (declaration external puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (typedef v `void`)
   (declaration external f~1 `fn() -> void` ∅)
   (function-definition external
      f~1 `fn() -> void`
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>) -> int>`
                  (puts~0 `fn(∅: ptr<char const>) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 2>>`
                        (string `array<char; 2>` "f\0"))))))))
   (declaration external g~5 `fn(∅: ptr<fn() -> void>) -> void` ∅)
   (function-definition external
      g~5 `fn(v: ptr<fn() -> void>) -> void`
      (params
         v~8 `ptr<fn() -> void>`)
      (compound-statement
         (expression (call `void` (v~8 `ptr<fn() -> void>`)))))
   (function-definition external
      print_g~9 `fn() -> void`
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>) -> int>`
                  (puts~0 `fn(∅: ptr<char const>) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 2>>`
                        (string `array<char; 2>` "g\0"))))))))
   (function-definition external
      main~12 `fn() -> int`
      (compound-statement
         (expression
            (call `void`
               (addressof `ptr<fn() -> void>`
                  (f~1 `fn() -> void`))))
         (expression
            (call `void`
               (addressof `ptr<fn(v: ptr<fn() -> void>) -> void>`
                  (g~5 `fn(v: ptr<fn() -> void>) -> void`))
               (addressof `ptr<fn() -> void>`
                  (print_g~9 `fn() -> void`)))))))

----- stderr -----
